--- a/app-done/build.gradle
+++ b/app-done/build.gradle
@@ -43,5 +43,5 @@ dependencies {
     compile 'com.android.support:mediarouter-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.android.gms:play-services-cast-framework:10.2.1'
-    compile 'com.googlecode.android-query:android-query:0.25.9'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
