--- a/app-done/build.gradle
+++ b/app-done/build.gradle
@@ -19,6 +19,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
+    dataBinding.enabled = true
+
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
