--- a/app-done/build.gradle
+++ b/app-done/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.android.gms:play-services-cast-framework:10.2.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.annimon:stream:1.1.7'
 }
